--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,6 +3,8 @@
         <!-- Base application theme. -->
         <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
             <!-- Customize your theme here. -->
+            <item name="colorPrimary">@color/primary</item>
+            <item name="colorPrimaryDark">@color/primary_dark</item>
             <item name="android:textColorPrimary">@color/accent</item>
             <item name="android:textColorPrimaryInverse">@android:color/primary_text_dark</item>
         </style>
@@ -20,7 +22,7 @@
             <item name="android:textColorHint">@color/black</item>
 
             <item name="colorButtonNormal">@color/primary_darker</item>
-            <item name="android:colorButtonNormal">@color/primary_darker</item>
+            
         </style>
 
         <style name="AppTheme.Dark.Dialog" parent="Theme.AppCompat.Dialog">
